--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       name="Rockdean Ferdjallah - JavaScript FullStack Developper"
       content="Get to know more about myself !"
     />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dlfp2xvis/image/upload/v1674765800/my-content/iconsRF/img-prez_botjfw.jpg"
+    />
+    <meta property="og:title" content="RF Portfolio" />
+    <meta property="og:description" content="FullStack JavaScript Developer" />
     <link rel="apple-touch-icon" href="./rf rf.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
