--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/dlfp2xvis/image/upload/v1674765800/my-content/iconsRF/img-prez_botjfw.jpg"
+      content="https://res.cloudinary.com/dlfp2xvis/image/upload/v1674767922/my-content/iconsRF/img-prez_ektipv.jpg"
     />
-    <meta property="og:title" content="RF Portfolio" />
+    <meta property="og:title" content="Rockdean Ferdjallah Portfolio" />
     <meta property="og:description" content="FullStack JavaScript Developer" />
     <link rel="apple-touch-icon" href="./rf rf.jpg" />
     <!--
