--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Rockdean Ferdjallah - JavaScript FullStack Developper"
-      content="Get to know more about myself !"
+      content="https://res.cloudinary.com/dlfp2xvis/image/upload/v1674767922/my-content/iconsRF/img-prez_ektipv.jpg"
     />
     <meta
       property="og:image"
